# media-processor

./: docker-compose.yml
api/: go.mod  go.sum  main.go
api/handler/: handler.go  status.go  upload.go
api/job/: model.go
api/storage/: file_storage.go  job_queue.go  metadata.go  storage.go
worker/: Cargo.toml
worker/examples/: async_benchmark.rs  async_benchmark_with_pooling.rs  async_file_processing.rs  sync_benchmark.rs  sync_file_processing.rs  upload.rs
worker/src/: async_redis_service.rs  connection_manager.rs  job.rs  lib.rs  main.rs  processor.rs  redis_service.rs  redis_service_pool.rs  threadpool.rs
