[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
redis = { version = "0.32.0", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false, features = ["macros", "rt-multi-thread"] }
