[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool = {version = "0.12.2", features = ["rt_tokio_1"]}
futures = "0.3.31"
image = "0.25.6"
redis = { version = "0.32.0", features = ["tokio-comp"] }
reqwest = { version = "0.12.20", features = ["multipart", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
